# portfolio-back-end

./: .dockerignore  .env  .env.example  .gitignore  API_SPECIFICATION.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.md
.github/workflows/: ci.yaml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 3a91f5925050_add_lab_notes_request_logs_and_contact_.py  4b2c8d0e1f23_add_categories_table.py  5c3d9e1f2a34_add_cover_image_to_projects.py  e71b803b1b04_create_projects_and_request_logs_tables.py
app/api/dependencies/: __init__.py  auth.py
app/api/routes/: api.py  auth.py  categories.py  contact.py  lab_notes.py  predictor.py  projects.py  upload.py
app/core/: config.py  events.py  paginator.py  security.py
app/db/: dependency.py  session.py
app/db/models/: category.py  contact.py  lab_notes.py  log.py  projects.py
app/schemas/: auth.py  base.py  category.py  contact.py  lab_notes.py  prediction.py  projects.py  upload.py
app/services/: predict.py  storage.py
ml/data/: make_dataset.py
ml/features/: build_features.py
tests/: test_api_predictor.py  test_config_and_errors.py  test_events_and_main.py  test_pagination_behavior.py  test_predict_service.py  test_predictor.py  test_request_logging.py
