[project]
requires-python = ">=3.9"
name = "portfolio-back-end"
version = "0.1.0"
description = "Yarikama's Portfolio With Blogs"
authors = [
    { name = "yarikama", email = "hsuhengjui@gmail.com" },
]
dependencies = [
    "fastapi>=0.103.0",
    "uvicorn==0.23.2",
    "pydantic[email]>=2.0.0",
    "requests>=2.32.0",
    "loguru>=0.7.0",
    "joblib>=1.2.0",
    "scikit-learn>=1.1.3",
    "pandas>=2.2.3",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2",
    "ruff>=0.4.0",
    "pre-commit>=3.5.0",
    "ipdb>=0.13.0",
]
aws = [
    "mangum>=0.17.0"
]

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = [".venv", "__pycache__", ".git", "alembic"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
]
ignore = [
    "B008",   # Depends() in default arguments is standard FastAPI pattern
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]

[tool.pyright]
extraPaths = ["app"]
